dynamic/css/imports/core.scss
/* ... */
nav#toc {

  #toc-wrapper {
    width : auto;

    &.multi {
      -webkit-column-count : 2;
      -webkit-column-gap   : 20px;
      -webkit-column-width : 15em;
      -moz-column-count    : 2;
      -moz-column-gap      : 20px;
      -moz-column-width    : 15em;
      column-count         : 2;
      column-gap           : 20px;
      column-width         : 15em;
    }

    //border-bottom  : 1px dashed #ccc;
    @extend .horizontal-rule;
    padding-bottom : 0.7em;
    margin-bottom  : 0.7em;
  }

  #toc-items  {
    list-style-type : decimal;
    padding-left    : 2em;

    a {
      white-space : normal;
    }
  }
}

.mastfooter {
  @extend .center-text;
  color     : #fff;
  font-size : 80%;
}

.secondary {

}

/* =============================================================================
   Code Styles
   ========================================================================== */

div[role=main] {

  overflow-x : hidden;

  pre {
    margin     : 0;
    padding    : 8px;
    overflow-x : auto;
    background : #f8f8f8;
    //max-width  : 585px;
    @include corner(right, top);
    @include corner(right, bottom);
    @include corner(left, bottom);
    border: 1px solid #ddd;
  }

  .nav-tabs > li.active > a {
    border: 1px solid #ddd;
    border-bottom: 0px;
  }

  .note {
    pre,
    code {
      background : #fdfdfd;
      font-style : normal;
    }
    .nav-tabs > li > a {
      font-style : normal;
    }
    .nav-tabs > li.active > a {
      background : #fdfdfd;
    }
  }

  code {
    font-size   : 90%;
    // white-space : nowrap;
  }

  .docs {
    padding   : 0 25px 0 0;
    min-width : 22em;
    @media screen and (max-width: 709px) {
      min-width : 17em;
    }

    h1 {
      font-size   : 225%;
      border-top  : 1px solid #c0c0c0;
      padding-top : .5em;
      line-height : 1.2;
    }

    h2 {
      font-size      : 150%;
      line-height    : 1.2;
      padding-bottom : .5em;
    }

    h3 {
      @extend .sans-bold;
      font-size   : 115%;
      line-height : 1.2;
    }

    ul, ol {
      padding-left : 25px;
    }

    > li {
      padding-bottom : 10px;
    }
  }

  div.tab-content {
    max-width: 600px;
    font-size: 85%;
  }

  .code {
    //@include bgPattern('code-bg.jpg');
    //@include boxShadow(inset 0 1px 4px #aeb9b6);
    font-size       : 80%;
    padding         : 7px;
    //border-bottom : 1px solid #f0f0f0;
    //@extend .box-green;
    margin-top      : 45px;
    margin-bottom   : 45px;
    border-bottom : 2px solid #d9dadd;
    border-top : 2px solid #d9dadd;
    width : auto;
  }

  .info {
    .code {
      background:none;
      @include boxShadow(inset 0 1px 4px #5A7772);
      margin-top    : 10px;
      margin-bottom : 10px;
    }
  }

  table.links {
    width : 100%;

    td:first-child {
      width : 30%;

      img {
        width : 100%;
      }
    }
    td:last-child {
      width : 70%;
    }
  }

  table.riak-conf {
    width: 799px;
    max-width: 799px;
    td:nth-of-type(1) {
      //font-size: 90%;
      overflow-wrap:break-word;
      //max-width: 300px;
    }
    td:nth-of-type(2) {
      font: 90%;
      overflow-wrap:break-word;
      //max-width: 325px;
    }
    td:nth-of-type(3) {
      overflow-wrap:break-word;
      //width: 100px;
    }
  }

  table.schemausecase {
    font-size:80%;
    th {
      color:#3a5752;
      padding: 3px 5px;
    }
    td {
      padding: 3px 5px;
      a {
        vertical-align: super;
        font-size:80%;
        color:$darkOrange;
        padding-left:3px;
      }
    }
  }
}


/* =============================================================================
   Tutorial Nav
   ========================================================================== */

article {
  nav.tutorial {
    text-align : center;
    margin     : 25px 0 5px;

    .up a {
      font-size       : 90%;
      text-decoration : none;
      color           : $linkBlue;

      &:hover {
        color : $orange;
      }
    }

    ul {
      padding    : 5px 5px 10px;
      border-top : 1px solid $subtleGray;
      //border-top : 1px dashed silver;

      li {
        display : inline;
        padding : 5px 0;

        &::before {
          content : ' | ';
        }

        &:first-child::before {
          content : '';
        }

        &:last-child {
          border-right : 0px;
        }
        .label {
          display : none;
        }
        &.prev::before {
          content : '<< ';
        }
        &.next::after {
          content : ' >>';
        }
      }
    }
  }
  .right-sidebar nav.tutorial {
    margin : 0;
  }
}


/* #top-nav input[type="search"],*/

#search-404
{
  @include allCorners(15px);
  @include transition(width 0.3s ease);
  border      : 1px solid silver;
  padding     : 2px 12px;
  // background  : inline-image('layout/small-search-icon.png') right 3px no-repeat #FFF; //FIXME(Drew): Putting this code in a coma so we can compile it. We need to fix this.
  font-weight : normal;
  font-family : 'titillium', verdana, arial, sans-serif;
  color       : #24514A;
  width       : 5em;

  &::-webkit-input-placeholder,
  &::-moz-placeholder,
  &::-ms-input-placeholder,
  &::input-placeholder {
    color : #24514A;
  }

  &:focus {
    width   : 10em;
    outline : none;
  }

  &:hover {
    color : #24514A;
  }
}
#search-404 {
  width : 20em;
  &:focus {
    width : 20em;
  }
}

.breadcrumbs {
  display : none;
}

table {
  .supported {
    display       : block;
    text-align    : center;
    font-size     : 140%;
    border-bottom : none;
    color         : green;
  }
  .unsupported {
    display       : block;
    text-align    : center;
    font-size     : 140%;
    border-bottom : none;
    color         : darkred;
  }
}
/* ... */

